css/board.css
/* ... */
html {
    scroll-behavior: smooth;
}

body {
    margin: 0;
    overflow-x: hidden;
    font-family: var(--primary-font);
    opacity: 0;
    transition: opacity 200ms ease-in-out;
    -webkit-transition: opacity 200ms ease-in-out;
}

.icon {
    font-family: 'IcoFont';
}

.menu-icon-bar {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-start;
    min-height: inherit;
    max-height: 100vh;
    max-width: calc(var(--font-size) * 4);
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    background-color: white;
    border-right: 1px solid lightgray;
}

#undo {
    font-family: 'IcoFont';
    font-size: calc(var(--font-size) * 1.3);
    cursor: pointer;
    user-select: none;
    display: flex;
    justify-content: center;
}

#users {
    font-family: 'IcoFont';
    font-size: calc(var(--font-size) * 1.7);
    cursor: pointer;
    user-select: none;
    display: flex;
    justify-content: center;
}

#priorities {
    font-family: 'IcoFont';
    cursor: pointer;
    user-select: none;
    display: flex;
    justify-content: center;
}

#priorities img {
    width: calc(var(--font-size) * 1.7);
}

#add-list {
    font-family: 'IcoFont';
    cursor: pointer;
    user-select: none;
    display: flex;
    justify-content: center;
}

#add-list img {
    width: 90%;
}

#remove-list {
    font-family: 'IcoFont';
    cursor: pointer;
    user-select: none;
    display: flex;
    justify-content: center;
}

#remove-list img {
    width: 90%;
}

#show-backlog {
    font-family: 'IcoFont';
    font-size: calc(var(--font-size) * 1.7);
    cursor: pointer;
    user-select: none;
    display: flex;
    justify-content: center;
}

#trash-can {
    font-family: 'LineAwesome';
    font-size: calc(var(--font-size) * 2.0);
    cursor: pointer;
    user-select: none;
    display: flex;
    justify-content: center;
}

#help-icon {
    font-family: 'IcoFont';
    font-size: calc(var(--font-size) * 1.7);
    cursor: pointer;
    user-select: none;
    display: none;
    justify-content: center;
}

#user-profile {
    font-family: 'IcoFont';
    font-size: calc(var(--font-size) * 1.3);
    cursor: pointer;
    user-select: none;
    display: flex;
    justify-content: center;
}

#settings {
    font-family: 'IcoFont';
    font-size: calc(var(--font-size) * 1.7);
    cursor: pointer;
    user-select: none;
    display: flex;
    justify-content: center;
}

#board-container {
    width: calc(100vw - 4rem);
    height: 100vh;
    display: flex;
    align-items: flex-start;
    background-color: aliceblue;
    flex-direction: row;
    overflow: auto;
    justify-content: flex-start;
    position: relative;
    left: calc(var(--font-size) * 4);
    top: calc(var(--font-size) * 0);
}

.board {
    width: fit-content;
    display: flex;
    grid-gap: calc(var(--font-size) * 3);
    margin-left: calc(var(--font-size) * 3.0);
    margin-top: calc(var(--font-size) * 2.5);
    margin-bottom: calc(var(--font-size) * 2.5);
    margin-right: calc(var(--font-size) * 3.0);
}

.column {
    min-height: fit-content;
    height: fit-content;
    min-width: 13rem;
    background-color: white;
    border-radius: calc(var(--font-size) * .2);
    overflow-y: auto;
    overflow-x: hidden;
    box-shadow: 1px 2px 2px 0px rgba(30, 30, 30, .2);
    user-select: none;
    display: flex;
    flex-direction: column;
    -webkit-user-select: none;
    -webkit-overflow-scrolling: touch;
    -webkit-user-drag: none;
}

.column .column-body {
    overflow-y: auto;
    overflow-x: hidden;
}

.column .new-task {
    font-size: calc(var(--font-size) * .8);
    padding: calc(var(--font-size) * .5);
    text-align: center;
    cursor: pointer;
}

.column .new-task:hover {
    letter-spacing: calc(var(--font-size) * .05);
    cursor: pointer;
}

.column .title {
    font-size: calc(var(--font-size) * 1);
    font-weight: 600;
    margin: 0;
    padding: calc(var(--font-size) * .5);
    text-align: center;
    cursor: default;
    user-select: none;
}

.column .title-regular {
    display: flex;
    justify-content: space-between;
    align-items: center;
    cursor: grab;
}

.column .title-regular .disabled {
    opacity: .3;
    cursor: grab;
}

.column .title-regular .disabled:hover {
    opacity: .3;
    cursor: grab;
    font-size: calc(var(--font-size) * 1);
}

.column .title-left,
.column .title-right {
    width: calc(var(--font-size) * 1.1);
    font-size: calc(var(--font-size) * 1);
}

.column .icon {
    cursor: pointer;
}

.column .icon:hover {
    cursor: pointer;
    font-size: calc(var(--font-size) * 1.1);
}

.column .title-regular .title-mid:active {
    letter-spacing: calc(var(--font-size) * .06);
    text-shadow: 0px 0px 1px;
}


#add-column-link {
    display: unset;
    color: unset;
    text-decoration: none;
    cursor: pointer;
}

#add-column .title:hover {
    text-decoration: none;
    font-size: calc(var(--font-size) * 1.05);
    cursor: pointer;
}

#add-column-input {
    position: absolute;
    min-width: calc(var(--font-size) * 8.5);
    max-width: calc(var(--font-size) * 9.5);
    height: calc(var(--font-size) * 2);
    border-radius: calc(var(--font-size) * .1);
    margin-top: calc(var(--font-size) * .3);
    border-style: none;
    outline: none;
    scroll-margin-left: -50vw;
}

#add-column-input-bg {
    position: relative;
    min-width: calc(var(--font-size) * 9.5);
    height: calc(var(--font-size) * 2);
    border-radius: calc(var(--font-size) * .1);
    margin-top: calc(var(--font-size) * .3);
    background-color: white;
}

#enter-new-column {
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
}

#add-column-buttons {
    display: flex;
    justify-content: space-between;
    align-items: center;
    font-size: calc(var(--font-size) * .65);
    min-width: calc(var(--font-size) * 9.5);
    margin-top: calc(var(--font-size) * .8);
    margin-bottom: calc(var(--font-size) * .3);
}
/* ... */

